--- a/srcs/experiments/kitti/config.json
+++ b/srcs/experiments/kitti/config.json
@@ -3,7 +3,7 @@
   "resume_training": false,
   "resume_from": 34,
 
-  "batch_size": 4,
+  "batch_size": 100,
   "learning_rate": 0.01,
   "momentum": 0.9,
   "weight_decay": 0.0001,
@@ -16,8 +16,8 @@
 
   "use_bn": true,
   "use_npy": false,
-  "mGPUs": false,
-  "frame_range": 10000,
+  "mGPUs": true,
+  "frame_range": 1000,
 
   "cls_threshold": 0.5,
   "nms_iou_threshold": 0.1,
